--- a/main.css
+++ b/main.css
@@ -47,14 +47,54 @@
  }
 
 .subHeaders {
-    text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
+  padding: 1000px 10px 10px 10px;
 }
 
 .skillSet {
-    text-align: center;
-    margin-left: -38px;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
 }
-  
+
+ul {
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
+  padding: 1025px 10px 10px 10px;
+}
+
+.projectsLeft{
+float: left;
+text-align: left;
+font-size: 20px;
+
+}
+
+.projectsRight{
+float: right;
+text-align: right;
+font-size: 20px;
+
+}
+
+.projectsMiddle{
+padding: 10px 10px 10px 10px;
+text-align: center;
+font-size: 20px;
+position: absolute;
+left: 50%;
+transform: translatex(-50%);
+
+}
+
+#keepInline{
+  padding: 10px 10px 10px 10px;
+  position: relative;
+  width: auto;
+}
+
 /* .list { //For Classes
     list-style: square;
   }
