--- a/Views/Projects/ProjectSonar/ProjectSonar.html
+++ b/Views/Projects/ProjectSonar/ProjectSonar.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
     <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
     <title>Michael Newton Portfolio</title>
-    <link rel="stylesheet" href="Views/Projects/ProjectSonar/PS.css">
+    <link rel="stylesheet" href="../../../Views/Projects/ProjectSonar/PS.css">
  
     <noscript>Please enable JavaScript to view the site in full :).</noscript>
 
@@ -24,6 +24,6 @@
   <button class="bttn">Dark</button>
   </div>
 
-  <script src="Views/Projects/ProjectSonar/PS.jss"></script>
+  <script src="../../../Views/Projects/ProjectSonar/PS.jss"></script>
 </body>
 </html>
