--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     --green: #5CBCA0;
     --white: #ffffff;
     --black: #000000;
+    --lightaquamarine: #d3f6ff;
   }
 
   @font-face {
@@ -9,7 +10,7 @@
     src: url('PrintClearly-webfont.eot');
     src: url('PrintClearly-webfont.eot?#iefix') format('embedded-opentype'),
          url('PrintClearly-webfont.woff2') format('woff2'),
-         url('../../../Assets/Fonts/PrintClearly-webfont.woff') format('woff'),
+         url('../Assets/Fonts/PrintClearly-webfont.woff') format('woff'),
          url('PrintClearly-webfont.ttf') format('truetype'),
          url('PrintClearly-webfont.svg#print_clearlyregular') format('svg');
     font-weight: normal;
@@ -21,7 +22,7 @@
     src: url('PrintBold-webfont.eot');
     src: url('PrintBold-webfont.eot?#iefix') format('embedded-opentype'),
          url('PrintBold-webfont.woff2') format('woff2'),
-         url('../../../Assets/Fonts/PrintBold-webfont.woff') format('woff'),
+         url('../Assets/Fonts/PrintBold-webfont.woff') format('woff'),
          url('PrintBold-webfont.ttf') format('truetype'),
          url('PrintBold-webfont.svg#print_boldregular') format('svg');
     font-weight: normal;
@@ -37,6 +38,13 @@
       background: var(--bg);
   }
 
+#navigationTopBanner{
+  width:auto;
+  height:50px;
+  background-color: var(--navBg);
+  top: 50%;
+  transform: translatey(-20%)
+}
  .aboutMe {
     text-align: center;
     font-family: 'print_boldregular';
@@ -103,25 +111,70 @@ position: relative;
 .theme-light {
     --bg: var(--white);
     --fontColor: var(--black);
-    --bttnBg: var(--black);
-    --bttnFontColor: var(--white);
+    --bttnBg: var(--white);
+    --bttnFontColor: var(--black);
+    --navBg: var(--black);
+    --navBarBttns: var(--white);
   }
 .theme-dark {
     --bg: var(--black);
     --fontColor: var(--green);
-    --bttnBg: var(--white);
-    --bttnFontColor: var(--black);
+    --bttnBg: var(--black);
+    --bttnFontColor: var(--white);
+    --navBg: var(--lightaquamarine);
+    --navBarBttns: var(--black);
   }
  .bttn {
-    position: absolute;
-    top: 20px;
-    left: 250px;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
+    position: relative;
+    left: 10px;
+    top: 2px;
+    height: 45px;
+    width: 45px;
+    border-radius: 100%;
     border: none;
     color: var(--bttnFontColor);
     background-color: var(--bttnBg);
   }
 
   .bttn:focus { outline-style: none; }
+
+  .homeBttn {
+    position: relative;
+    left: 100px;
+    height: 45px;
+    top: 5px;
+    width: 80px;
+    border: none;
+    color: var(--navBarBttns);
+    background-color: var(--navBg);
+    font-family: 'print_boldregular';
+    font-size: 20px;
+    left: 42.5%;  
+  }
+
+  .contactBttn {
+    position: relative;
+    left: 100px;
+    height: 45px;
+    top: 5px;
+    width: 80px;
+    border: none;
+    color: var(--navBarBttns);
+    background-color: var(--navBg);
+    font-family: 'print_boldregular';
+    font-size: 20px;
+    left: 50%;  
+  }
+
+  .afterwerkBttn {
+    position: relative;
+    left: 100px;
+    height: 45px;
+    top: 5px;
+    width: 200px;
+    border: none;
+    color: var(--navBarBttns);
+    background-color: var(--navBg);
+    font-family: 'print_boldregular';
+    font-size: 20px;  
+  }
