Added Contact Images

--- a/Views/Pages/contactMe.html
+++ b/Views/Pages/contactMe.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
     <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
     <title>Michael Newton Portfolio</title>
-    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="../../css/contactMe.css">
  
     <noscript>Please enable JavaScript to view the site in full :).</noscript>
 
@@ -17,7 +17,18 @@
       <a href="/Views/Pages/afterwerkDigital.html" class="afterwerkBttn">Afterwerk Digital</A>
   </div>
 
-
+  <div id="GHFormatting">
+  <a href="https://github.com/BlueHammy"><img src="/Assets/Images/rsz_1github-logo.png";></a>
+  </div>
+  
+  <div id="GMAILFormatting">
+  <a href="https://mail.google.com/mail/u/?authuser=mtnewtoncgp@gmail.com"><img src="/Assets/Images/Gmail Image.png";></a>
+  </div>
+  
+  <div id="LIFormatting">
+  <a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><img src="/Assets/Images/linkedin_circle_logo.png";></a>
+  </div>
+  
   <script src="../../js/app.js"></script>
 </body>
 </html>
