Fixed ContactMe Issues

--- a/Views/Pages/contactMe.html
+++ b/Views/Pages/contactMe.html
@@ -17,18 +17,32 @@
       <a href="/Views/Pages/afterwerkDigital.html" class="afterwerkBttn">Afterwerk Digital</A>
   </div>
 
-  <div id="GHFormatting">
-  <a href="https://github.com/BlueHammy"><img src="/Assets/Images/rsz_1github-logo.png";></a>
-  </div>
-  
-  <div id="GMAILFormatting">
-  <a href="https://mail.google.com/mail/u/?authuser=mtnewtoncgp@gmail.com"><img src="/Assets/Images/Gmail Image.png";></a>
-  </div>
-  
-  <div id="LIFormatting">
-  <a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><img src="/Assets/Images/linkedin_circle_logo.png";></a>
-  </div>
-  
+  <h1 class="sectionHeaders">Follow me on GitHub, Connect with me on LinkedIn or Email Me!</h1>
+
+
+    <div id="projectBlock">
+      <h2 class="headerBlock"><a href="https://github.com/BlueHammy"><b>BlueHammy</b></a></p>
+        <div id="imageBlock">
+          <a href="https://github.com/BlueHammy"><img src="/Assets/Images/rsz_1github-logo.png"; width="150px"; height=auto;></a>
+        </div>
+        </div>
+    
+    <div id="projectBlock">
+      <h2 class="headerBlock"><a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><b>Michael Newton</b></a></p>
+        <div id="imageBlock">
+          <a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><img src="/Assets/Images/linkedin_circle_logo.png"; width="150px"; height=auto;></a>
+      </div>
+      </div>
+
+    <div id="projectBlock">
+    <h2 class="headerBlock"><a href="mailto:mtnewtoncgp@gmail.com"><b>mtnewtoncgp@gmail.com</b></a></p>
+      <div id="imageBlock">
+        <a href="mailto:mtnewtoncgp@gmail.com"><img src="/Assets/Images/Gmail Image.png"; width="150px"; height=auto;"></a>
+    </div>
+    </div>
+
+
+
   <script src="../../js/app.js"></script>
 </body>
 </html>
