Finished Project Sonar Page

--- a/Views/Projects/ProjectSonar/ProjectSonar.html
+++ b/Views/Projects/ProjectSonar/ProjectSonar.html
@@ -1,29 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NJSZEZE0LP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NJSZEZE0LP');
+</script>
+
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  user-scalable=0" name="viewport">
     <title>Michael Newton Portfolio</title>
-    <link rel="stylesheet" href="../../../Views/Projects/ProjectSonar/PS.css">
+    <link rel="stylesheet" href="PS.css">
  
     <noscript>Please enable JavaScript to view the site in full :).</noscript>
 
 </head>
 <body class="theme-light" width = "device-width">
+  <div id="navigationTopBanner">
+      <button class="bttn">Dark</button>
+      <a href="/Views/Pages/afterwerkDigital.html" class="afterwerkBttn">Afterwerk Digital</A>
+      <a href="/" class="homeBttn">Home</a>
+      <a href="/Views/Pages/contactMe.html" class="contactBttn">Contact</a>
+  </div>
 
       <h1 class="sectionHeaders">Project: Sonar!</h1>
 
       <div id="projectBlock">
-      <h2 class="headerBlock">Project: Sonar!</p>
         <div id="imageBlock">
-        <img src="Assets/Images/Project_Sonar.png"; width="200px"; height="210px">
+        <img src="../../../Assets/Images/Project_Sonar_Instructions.PNG"; width="250px"; height="250px">
       </div>
       </div>
 
-  <div>
-  <button class="bttn">Dark</button>
-  </div>
+      <div id="projectBlock">
+        <div id="imageBlock">
+        <img src="../../../Assets/Images/Project_Sonar_MidGame.PNG"; width="250px"; height="250px">
+      </div>
+      </div>
 
-  <script src="../../../Views/Projects/ProjectSonar/PS.jss"></script>
+      <div id="projectBlock">
+        <div id="imageBlock">
+        <img src="../../../Assets/Images/Project_Sonar_GameOver.PNG"; width="250px"; height="250px">
+      </div>
+      </div>
+
+      <p style="text-align: center;">Game Jam Theme: Waves</p>
+      <p style="text-align: center;">A Game Jam game made in Unity by Michael Newton, Ryan Hood, Harry Biggs and Joshua Jackson.</p>
+      <p style="text-align: center;">The aim is to use your echo location (Space Bar) to fly your bat through a cave system.</p>
+      <a href="https://bluehammy.itch.io/project-sonar";><p style="text-align: center;">Download Here!</p></a>
+      
+
+  <script src="PS.js"></script>
 </body>
 </html>
