--- a/Views/Pages/contactMe.html
+++ b/Views/Pages/contactMe.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
-    <title>Michael Newton Portfolio</title>
-    <link rel="stylesheet" href="../../css/contactMe.css">
- 
-    <noscript>Please enable JavaScript to view the site in full :).</noscript>
+  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
+  <title>Michael Newton Portfolio</title>
+  <link rel="stylesheet" href="../../css/main.css">
+
+  <noscript>Please enable JavaScript to view the site in full :).</noscript>
 
 </head>
-<body class="theme-light" width = "device-width">
-  <div id="navigationTopBanner">
-    <button class="bttn">Dark</button>
-    <a href="/Views/Pages/afterwerkDigital.html" class="afterwerkBttn">Afterwerk Digital</A>
-    <a href="/" class="homeBttn">Home</a>
-    <a href="/Views/Pages/contactMe.html" class="contactBttn">Contact</a>
-</div>
+
+<body class="theme-light" width="device-width">
+
+  <header>
+    <div class="wrap">
+      <nav>
+        <div><button class="bttn">Dark</button></div>
+        <div><a href="/">Home</a></div>
+        <div><a href="/Views/Pages/contactMe.html">Contact</a></div>
+      </nav>
+    </div>
+  </header>
+
 
   <h1 class="sectionHeaders">Follow me on GitHub, Connect with me on LinkedIn or Email Me!</h1>
 
 
-    <div id="projectBlock">
-      <h2 class="headerBlock"><a href="https://github.com/BlueHammy"><b>BlueHammy</b></a></p>
-        <div id="imageBlock">
-          <a href="https://github.com/BlueHammy"><img src="/Assets/Images/rsz_1github-logo.png"; width="150px"; height=auto;></a>
-        </div>
-        </div>
-    
-    <div id="projectBlock">
-      <h2 class="headerBlock"><a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><b>Michael Newton</b></a></p>
-        <div id="imageBlock">
-          <a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><img src="/Assets/Images/linkedin_circle_logo.png"; width="150px"; height=auto;></a>
+  <div id="projectBlock">
+    <h2 class="headerBlock"><a href="https://github.com/BlueHammy"><b>BlueHammy</b></a></p>
+      <div id="imageBlock">
+        <a href="https://github.com/BlueHammy"><img src="/Assets/Images/rsz_1github-logo.png" ; width="150px" ; height=auto;></a>
       </div>
-      </div>
+  </div>
 
-    <div id="projectBlock">
+  <div id="projectBlock">
+    <h2 class="headerBlock"><a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><b>Michael Newton</b></a></p>
+      <div id="imageBlock">
+        <a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><img src="/Assets/Images/linkedin_circle_logo.png" ; width="150px" ; height=auto;></a>
+      </div>
+  </div>
+
+  <div id="projectBlock">
     <h2 class="headerBlock"><a href="mailto:mtnewtoncgp@gmail.com"><b>mtnewtoncgp@gmail.com</b></a></p>
       <div id="imageBlock">
-        <a href="mailto:mtnewtoncgp@gmail.com"><img src="/Assets/Images/Gmail Image.png"; width="150px"; height=auto;"></a>
-    </div>
-    </div>
+        <a href="mailto:mtnewtoncgp@gmail.com"><img src="/Assets/Images/Gmail Image.png" ; width="150px" ; height=auto;"></a>
+      </div>
+  </div>
 
 
 
   <script src="../../js/app.js"></script>
 </body>
+
 </html>
