--- a/Views/Projects/DungeonRun/DungeonRun.html
+++ b/Views/Projects/DungeonRun/DungeonRun.html
@@ -1,29 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
-    <title>Michael Newton Portfolio</title>
-    <link rel="stylesheet" href="main.css">
- 
-    <noscript>Please enable JavaScript to view the site in full :).</noscript>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJSZEZE0LP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-NJSZEZE0LP');
+  </script>
+
+  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  user-scalable=0" name="viewport">
+  <title>Michael Newton Portfolio</title>
+  <link rel="stylesheet" href="../../../css/main.css">
+
+  <noscript>Please enable JavaScript to view the site in full :).</noscript>
 
 </head>
-<body class="theme-light" width = "device-width">
 
-      <h1 class="sectionHeaders">Dungeon Run</h1>
+<body class="theme-light" width="device-width">
 
-      <div id="projectBlock">
-      <h2 class="headerBlock">Dungeon Run</p>
-        <div id="imageBlock">
-          <img src="Assets/Images/Dungeon_Run.png"; width="200px"; height="210px">
-        </div>
-        </div>
+  <header>
+    <div class="wrap">
+      <nav>
+        <div><button class="bttn">Dark</button></div>
+        <div><a href="/">Home</a></div>
+        <div><a href="/Views/Pages/contactMe.html">Contact</a></div>
+      </nav>
+    </div>
+  </header>
 
-  <div>
-  <button class="bttn">Dark</button>
+  <h1 class="sectionHeaders">Dungeon Run!</h1>
+
+  <div id="projectBlock">
+    <div id="imageBlock">
+      <img src="../../../Assets/Images/Dungeon_Run_Menu.PNG" ; width="250px" ; height="250px">
+    </div>
   </div>
 
-  <script src="app.js"></script>
+  <div id="projectBlock">
+    <div id="imageBlock">
+      <img src="../../../Assets/Images/Dungeon_Run_Gameplay.PNG" ; width="250px" ; height="250px">
+    </div>
+  </div>
+
+  <div id="projectBlock">
+    <div id="imageBlock">
+      <img src="../../../Assets/Images/Dungeon_Run_BossFight.PNG" ; width="250px" ; height="250px">
+    </div>
+  </div>
+
+  <p style="text-align: center;">My university dissertation project. Mark acheived: 67%</p>
+  <p style="text-align: center;">This game was created as my final year project for university using the Unity game engine.</p>
+  <p style="text-align: center;">This heavily inspired by games such as: The Binding of Isaac, Enter the Gungeon and Dungeon Souls this is a 3D dungeon crawler.</p>
+  <p style="text-align: center;">The aim is to fight your way through rooms and collect items (which are randomised!) once you feel you have enough power you can decide to fight the boss. If you defeat the final boss, you win!</p>
+  <a href="https://bluehammy.itch.io/dungeon-run" ;>
+    <p style="text-align: center;">Download Here!</p>
+  </a>
+
+
+  <script src="DR.js"></script>
 </body>
+
 </html>
