--- a/css/main.css
+++ b/css/main.css
@@ -1,58 +1,80 @@
 :root {
-    --green: #5CBCA0;
-    --white: #ffffff;
-    --black: #000000;
-    --lightaquamarine: #d3f6ff;
-  }
-
-  @font-face {
-    font-family: 'print_clearlyregular';
-    src: url('PrintClearly-webfont.eot');
-    src: url('PrintClearly-webfont.eot?#iefix') format('embedded-opentype'),
-         url('PrintClearly-webfont.woff2') format('woff2'),
-         url('../Assets/Fonts/PrintClearly-webfont.woff') format('woff'),
-         url('PrintClearly-webfont.ttf') format('truetype'),
-         url('PrintClearly-webfont.svg#print_clearlyregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  --green: #5CBCA0;
+  --white: #ffffff;
+  --black: #000000;
+  --lightaquamarine: #d3f6ff;
+  --darkaquamarine: #153C4E;
 }
 
 @font-face {
-    font-family: 'print_boldregular';
-    src: url('PrintBold-webfont.eot');
-    src: url('PrintBold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('PrintBold-webfont.woff2') format('woff2'),
-         url('../Assets/Fonts/PrintBold-webfont.woff') format('woff'),
-         url('PrintBold-webfont.ttf') format('truetype'),
-         url('PrintBold-webfont.svg#print_boldregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: 'print_clearlyregular';
+  src: url('PrintClearly-webfont.eot');
+  src: url('PrintClearly-webfont.eot?#iefix') format('embedded-opentype'),
+    url('PrintClearly-webfont.woff2') format('woff2'),
+    url('../Assets/Fonts/PrintClearly-webfont.woff') format('woff'),
+    url('PrintClearly-webfont.ttf') format('truetype'),
+    url('PrintClearly-webfont.svg#print_clearlyregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
-  * {
-    color: var(--fontColor);
-    font-family: 'print_clearlyregular';
-  }
 
-  body {
-      background: var(--bg);
-  }
-
-#navigationTopBanner{
-  width:auto;
-  height:50px;
-  background-color: var(--navBg);
-  top: 50%;
-  transform: translatey(-20%)
+@font-face {
+  font-family: 'print_boldregular';
+  src: url('PrintBold-webfont.eot');
+  src: url('PrintBold-webfont.eot?#iefix') format('embedded-opentype'),
+    url('PrintBold-webfont.woff2') format('woff2'),
+    url('../Assets/Fonts/PrintBold-webfont.woff') format('woff'),
+    url('PrintBold-webfont.ttf') format('truetype'),
+    url('PrintBold-webfont.svg#print_boldregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
- .aboutMe {
-    text-align: center;
-    font-family: 'print_boldregular';
- }
 
- .sectionHeaders {
-    text-align: center;
- }
+* {
+  color: var(--fontColor);
+  font-family: 'print_clearlyregular';
+}
+
+body {
+  background: var(--bg);
+}
+
+nav {
+  overflow: hidden;
+  background-color: #222;
+}
+
+nav a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  background-color: red;
+}
+
+nav button {
+  float: left;
+  text-align: center;
+  vertical-align: bottom;
+}
+
+nav button:hover {
+  background-color: var(--colAqua);
+}
+
+.aboutMe {
+  text-align: center;
+  font-family: 'print_boldregular';
+}
+
+.sectionHeaders {
+  text-align: center;
+}
 
 .subHeaders {
   position: absolute;
@@ -73,100 +95,63 @@ ul {
   padding: 1025px 10px 10px 10px;
 }
 
-.headerBlock{
-float: left;
-font-size: 20px;
-position: relative;
-
+.headerBlock {
+  float: left;
+  font-size: 20px;
+  position: relative;
 }
 
-#projectBlock{
+#projectBlock {
   clear: both;
   display: inline-block;
   width: auto;
   padding: 10px 10px 10px 10px;
-  left: 28.7%; 
-  transform: translate(-32.5%, 0); 
+  left: 28.7%;
+  transform: translate(-32.5%, 0);
   position: relative;
   text-align: center;
 }
 
-#imageBlock{
+#imageBlock {
   clear: both;
   display: inline-block;
   position: relative;
   width: auto;
-  padding: 1px 1px 1px 1px; 
+  padding: 1px 1px 1px 1px;
 }
 
 /* .list { //For Classes
     list-style: square;
   }
 */
-  
- /* #msg { //For IDs
+/* #msg { //For IDs
     font-family: monospace;
   }
 */
 .theme-light {
-    --bg: var(--white);
-    --fontColor: var(--black);
-    --bttnBg: var(--white);
-    --bttnFontColor: var(--black);
-    --navBg: var(--black);
-    --navBarBttns: var(--white);
-  }
+  --bg: var(--white);
+  --fontColor: var(--black);
+  --bttnBg: var(--white);
+  --bttnFontColor: var(--black);
+  --colAqua: var(--lightaquamarine);
+}
+
 .theme-dark {
-    --bg: var(--black);
-    --fontColor: var(--green);
-    --bttnBg: var(--black);
-    --bttnFontColor: var(--white);
-    --navBg: var(--lightaquamarine);
-    --navBarBttns: var(--black);
-  }
- .bttn {
-    position: relative;
-    left: 10px;
-    top: 2px;
-    height: 45px;
-    width: 45px;
-    border-radius: 100%;
-    border: none;
-    color: var(--bttnFontColor);
-    background-color: var(--bttnBg);
-  }
+  --bg: var(--black);
+  --fontColor: var(--green);
+  --bttnBg: var(--black);
+  --bttnFontColor: var(--white);
+  --colAqua: var(--darkaquamarine);
+}
 
-  .bttn:focus { outline-style: none; }
+.bttn {
+  height: 45px;
+  width: 45px;
+  border-radius: 100%;
+  color: var(--bttnFontColor);
+  background-color: var(--bttnBg);
+}
 
-  .homeBttn {
-    position: relative;
-    height: 45px;
-    top: 5px;
-    color: var(--navBarBttns);
-    background-color: var(--navBg);
-    font-family: 'print_boldregular';
-    font-size: 20px;
-    margin-left: 6%;
-  }
-
-  .contactBttn {
-    position: relative;
-    height: 45px;
-    top: 5px;
-    color: var(--navBarBttns);
-    background-color: var(--navBg);
-    font-family: 'print_boldregular';
-    font-size: 20px;
-    margin-left: 6%;
-  }
-
-  .afterwerkBttn {
-    position: relative;
-    height: 5px;
-    top: 5px;
-    color: var(--navBarBttns);
-    background-color: var(--navBg);
-    font-family: 'print_boldregular';
-    font-size: 20px;  
-    margin-left: 28%;
-  }
+.bttn:focus {
+  outline-style: none;
+}
