Added New Project, Updated Formatting Using Flexbox

--- a/Views/Projects/BandNameGenerator/BandNameGenerator.html
+++ b/Views/Projects/BandNameGenerator/BandNameGenerator.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  user-scalable=0" name="viewport">
   <title>Michael Newton Portfolio</title>
@@ -23,14 +24,14 @@
     </div>
   </header>
 
-  <h1 class="sectionHeaders">Project: Sonar!</h1>
+  <h1 class="sectionHeaders">A Simple Band Name Generator!</h1>
 
   <div id="projectContainer">
     <div id="projectBlock">
       <div id="headerItem">
       </div>
         <div id="imageBlock">
-          <img src="../../../Assets/Images/Project_Sonar_Instructions.PNG"></a>
+          <img src="../../../Assets/Images/Band_Name_Generator_Example_1.png"></a>
         </div>
     </div>
 
@@ -38,7 +39,7 @@
       <div id="headerItem">
       </div>
         <div id="imageBlock">
-        <img src="../../../Assets/Images/Project_Sonar_MidGame.PNG"></a>
+        <img src="../../../Assets/Images/Band_Name_Generator_Example_2.png"></a>
         </div>
     </div>
 
@@ -46,29 +47,29 @@
       <div id="headerItem">
       </div>
         <div id="imageBlock">
-          <img src="../../../Assets/Images/Project_Sonar_GameOver.PNG">
+          <img src="../../../Assets/Images/Band_Name_Generator_Example_3.png">
         </div>
     </div>
     </div>
 
     <div id="textContainer">
       <div id="textItem">
-  <p>Game Jam Theme: Waves</p>
+  <p>A simple band name generator</p>
       </div>
       <div id="textItem">
-  <p>A Game Jam game made in Unity by Michael Newton, Ryan Hood, Harry Biggs and Joshua Jackson.</p>
+  <p>Created using vanilla HTML, CSS and JavaScript</p>
       </div>
     <div id="textItem">
-  <p>The aim is to use your echo location (Space Bar) to fly your bat through a cave system.</p>
+  <p>Click the Refresh button to generate a new name!</p>
     </div>
-    <a href="https://bluehammy.itch.io/project-sonar" ;>
+  <a href="https://bluehammy.github.io/BandNameGen/" ;>
     <div id="textItem">
-      <strong><p style="text-align: center;">Download Here!</p></strong>
+    <strong><p style="text-align: center;">Try It Here!</p></strong>
     </div>
   </a>
-</div>
+    </div>
 
-  <script src="PS.js"></script>
+  <script src="BNG.js"></script>
 </body>
 
 </html>
