--- a/Views/Pages/contactMe.html
+++ b/Views/Pages/contactMe.html
@@ -26,28 +26,31 @@
 
   <h1 class="sectionHeaders">Follow me on GitHub, Connect with me on LinkedIn or Email Me!</h1>
 
-
-  <div id="projectBlock">
-    <h2 class="headerBlock"><a href="https://github.com/BlueHammy"><b>BlueHammy</b></a></p>
-      <div id="imageBlock">
-        <a href="https://github.com/BlueHammy"><img src="/Assets/Images/rsz_1github-logo.png" ; width="150px" ; height=auto;></a>
+  <div id="projectContainer">
+    <div id="projectBlock">
+      <div id="headerItem"><a href="https://github.com/BlueHammy"><p style="font-size: auto;"><strong>BlueHammy</strong></a></p>
       </div>
-  </div>
+        <div id="imageBlock">
+          <a href="https://github.com/BlueHammy"><img src="/Assets/Images/rsz_1github-logo.png"></a>
+        </div>
+    </div>
 
-  <div id="projectBlock">
-    <h2 class="headerBlock"><a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><b>Michael Newton</b></a></p>
-      <div id="imageBlock">
-        <a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><img src="/Assets/Images/linkedin_circle_logo.png" ; width="150px" ; height=auto;></a>
+    <div id="projectBlock">
+      <div id="headerItem"><a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><p style="font-size: auto;"><strong>Michael Newton</strong></a></p>
       </div>
-  </div>
+        <div id="imageBlock">
+          <a href="https://www.linkedin.com/in/michael-newton-b541ab18b"><img src="/Assets/Images/linkedin_circle_logo.png"></a>
+        </div>
+    </div>
 
-  <div id="projectBlock">
-    <h2 class="headerBlock"><a href="mailto:mtnewtoncgp@gmail.com"><b>mtnewtoncgp@gmail.com</b></a></p>
-      <div id="imageBlock">
-        <a href="mailto:mtnewtoncgp@gmail.com"><img src="/Assets/Images/Gmail Image.png" ; width="150px" ; height=auto;"></a>
+    <div id="projectBlock">
+      <div id="headerItem"><a href="mailto:mtnewtoncgp@gmail.com"><p style="font-size: auto;"><strong>mtnewtoncgp@gmail.com</strong></a></p>
       </div>
-  </div>
-
+        <div id="imageBlock">
+          <a href="mailto:mtnewtoncgp@gmail.com"><img src="/Assets/Images/Gmail Image.png"></a>
+        </div>
+    </div>
+    </div>
 
 
   <script src="../../js/app.js"></script>
