--- a/Views/Projects/DungeonRun/DungeonRun.html
+++ b/Views/Projects/DungeonRun/DungeonRun.html
@@ -3,19 +3,6 @@
 
 <head>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJSZEZE0LP"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'G-NJSZEZE0LP');
-  </script>
-
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  user-scalable=0" name="viewport">
   <title>Michael Newton Portfolio</title>
@@ -39,32 +26,51 @@
 
   <h1 class="sectionHeaders">Dungeon Run!</h1>
 
-  <div id="projectBlock">
-    <div id="imageBlock">
-      <img src="../../../Assets/Images/Dungeon_Run_Menu.PNG" ; width="250px" ; height="250px">
+  <div id="projectContainer">
+    <div id="projectBlock">
+      <div id="headerItem">
+      </div>
+        <div id="imageBlock">
+          <img src="../../../Assets/Images/Dungeon_Run_Menu.PNG"></a>
+        </div>
     </div>
-  </div>
 
-  <div id="projectBlock">
-    <div id="imageBlock">
-      <img src="../../../Assets/Images/Dungeon_Run_Gameplay.PNG" ; width="250px" ; height="250px">
+    <div id="projectBlock">
+      <div id="headerItem">
+      </div>
+        <div id="imageBlock">
+        <img src="../../../Assets/Images/Dungeon_Run_Gameplay.PNG"></a>
+        </div>
     </div>
-  </div>
 
-  <div id="projectBlock">
-    <div id="imageBlock">
-      <img src="../../../Assets/Images/Dungeon_Run_BossFight.PNG" ; width="250px" ; height="250px">
+    <div id="projectBlock">
+      <div id="headerItem">
+      </div>
+        <div id="imageBlock">
+          <img src="../../../Assets/Images/Dungeon_Run_BossFight.PNG">
+        </div>
     </div>
-  </div>
+    </div>
 
-  <p style="text-align: center;">My university dissertation project. Mark acheived: 67%</p>
-  <p style="text-align: center;">This game was created as my final year project for university using the Unity game engine.</p>
-  <p style="text-align: center;">This heavily inspired by games such as: The Binding of Isaac, Enter the Gungeon and Dungeon Souls this is a 3D dungeon crawler.</p>
-  <p style="text-align: center;">The aim is to fight your way through rooms and collect items (which are randomised!) once you feel you have enough power you can decide to fight the boss. If you defeat the final boss, you win!</p>
+    <div id="textContainer">
+      <div id="textItem">
+  <p>My university dissertation project. Mark acheived: 67%</p>
+      </div>
+      <div id="textItem">
+  <p>This game was created as my final year project for university using the Unity game engine.</p>
+      </div>
+    <div id="textItem">
+  <p>This heavily inspired by games such as: The Binding of Isaac, Enter the Gungeon and Dungeon Souls this is a 3D dungeon crawler.</p>
+    </div>
+    <div id="textItem">
+  <p>The aim is to fight your way through rooms and collect items (which are randomised!) once you feel you have enough power you can decide to fight the boss. If you defeat the final boss, you win!</p>
+    </div>
   <a href="https://bluehammy.itch.io/dungeon-run" ;>
-    <p style="text-align: center;">Download Here!</p>
+    <div id="textItem">
+      <strong><p style="text-align: center;">Download Here!</p></strong>
+    </div>
   </a>
-
+</div>
 
   <script src="DR.js"></script>
 </body>
