--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,13 @@ nav button:hover {
 .aboutMe {
   text-align: center;
   font-family: 'print_boldregular';
+  font-size: 26px;
+}
+
+#textItem {
+  text-align: center;
+  font-family: 'print_boldregular';
+  font-size: 26px;
 }
 
 .sectionHeaders {
@@ -101,17 +108,6 @@ ul {
   position: relative;
 }
 
-#projectBlock {
-  clear: both;
-  display: inline-block;
-  width: auto;
-  padding: 10px 10px 10px 10px;
-  left: 28.7%;
-  transform: translate(-32.5%, 0);
-  position: relative;
-  text-align: center;
-}
-
 #imageBlock {
   clear: both;
   display: inline-block;
@@ -120,14 +116,6 @@ ul {
   padding: 1px 1px 1px 1px;
 }
 
-/* .list { //For Classes
-    list-style: square;
-  }
-*/
-/* #msg { //For IDs
-    font-family: monospace;
-  }
-*/
 .theme-light {
   --bg: var(--white);
   --fontColor: var(--black);
@@ -154,4 +142,29 @@ ul {
 
 .bttn:focus {
   outline-style: none;
+}
+
+#textContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 75%;
+  margin:0px auto;
+  text-align: center;
+}
+
+#projectContainer{
+  display: flex;
+  justify-content: space-evenly;
+  width: 95%;
+  margin:0px auto;
+}
+
+img {
+  max-width:100%;
+  max-height:100%;
+}
+
+#headerItem{
+  text-align: center;
 }
